--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header>
         <nav>
             <ul>
-                <li><img src="" alt=""></li>
+                <li><a href="#">WebStudio</a></li>
                 <li><a href="#">Estudio</a></li>
                 <li><a href="#">Portafolio</a></li>
                 <li><a href="#">Contactos</a></li>
@@ -24,5 +24,69 @@
             <h1>SOLUCIONES EFICACES PARA SU NEGOCIO</h1>
         </div>
     </section>
+    <section>
+        <!-- 
+        <table>
+            <tr>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+        </table>
+        -->
+        <dl>
+            <dt>JPEG</dt>
+            <dd>
+                xxxxx <span class="accent" style="color: red;">xxxxx</span> xxxxx
+            </dd>
+            <td>PNG</td>
+            <dd>
+                xxxxxxxxxxxxxxxxxx
+            </dd>
+        </dl>
+        <p><strong>Formula</strong> del agua: H<sub>2</sub>0</p>
+        <p>El <b>área</b> total del <i>terreno</i> es: 150m<sup>2</sup></p>
+        <address>
+            Pasto <br>
+            Nariño <br>
+            Colombia
+        </address>
+        <address>
+            <a href="mailto:g11rm10n@gmail.com">g11rm10n@gmail.com</a> <br>
+            <a href="tel:+573154092886">+573154092886</a>
+        </address>
+        <h2>¡Hola amigos!</h2>
+        <p>Todos los derechos reservados &copy; WebStudio, 2022</p>
+        <p>Todos los derechos reservados &#169; WebStudio, 2022</p>
+        <p>Todos los derechos reservados &#xa9; WebStudio, 2022</p>
+    </section>
+    <video 
+    src="video/Seal.mp4"
+    poster="https://images.pexels.com/photos/595804/pexels-photo-595804.jpeg?w=640"
+    with="720"
+    controls
+    autoplay
+    loop
+    preload="auto"
+    >
+    </video>
+    <audio 
+    src="audio/artofwar.mp3"
+    controls autocapitalize loop preload="auto"></audio>
 </body>
 </html>
