--- a/index.html
+++ b/index.html
@@ -5,46 +5,43 @@
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title>Web Studio</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
+    <link rel='stylesheet' type='text/css' media='screen' href='css/styles.css'>
     <script src='main.js'></script>
 </head>
 <body>
     <header>
         <nav>
-            <ul>
-                <li><a href="#">WebStudio</a></li>
-                <li><a href="#">Estudio</a></li>
-                <li><a href="#">Portafolio</a></li>
-                <li><a href="#">Contactos</a></li>
-            </ul>
-            <address>
-                <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-                <a href="tel:+525555296000">+52 55 5529 6000</a>
-            </address>
+            <a href="#" style="color: #2196F3; font-family: 'Raleway'; font-style: 'normal'; font-weight: 700; font-size: 26px;">WebStudio</a>
+            <a href="#" class="link">Estudio</a>
+            <a href="#" class="link">Portafolio</a>
+            <a href="#" class="link">Contactos</a>
+            <a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a>
+            <a href="tel:+525555296000" class="link">+52 55 5529 6000</a>
         </nav>
     </header>
     <section>
+        <input type="text" name="form" class="over">
         <div id="banner">
             <h1>SOLUCIONES EFICACES PARA SU NEGOCIO</h1> <br>
             <button>Solicite nuestro servicio</button>
         </div>
     </section>
     <section>
-        <article>
+        <article id="article-1">
         <h3>ATENCIÓN A LOS DETALLES</h3>
         <p>Nos adentramos en todos los detalles y procesos de su negocio, para así desarrollar una solución a su medida.</p>
         </article>
-        <article>
+        <article id="article-2" class="title-text">
         <h3>PUNTUALIDAD</h3>
         <p>Con nosotros, usted puede sentirse seguro y protegido. Un principio importante de la empresa: respetar su tiempo y respetar los plazos acordados.</p>
         </article>
-        <article>
-        <h3>PLANIFICACIÓN</h3>
+        <article id="article-3">
+        <h3 class="title-text">PLANIFICACIÓN</h3>
         <p>Usted podrá observar y participar en cada fase del desarrollo y aplicación de soluciones.</p>
         </article>
-        <article>
+        <article id="article-4">
         <h3>TEGNOLOGÍA MODERNA</h3>
-        <p>Usamos herramientas innovadoras para resolver las tareas asignadas. Es hora de simplificar los procesos laborales.</p>
+        <p class="title-text">Usamos herramientas innovadoras para resolver las tareas asignadas. Es hora de simplificar los procesos laborales.</p>
         </article>
     </section>
     <section>
