--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
             <a href="tel:+525555296000" class="link">+52 55 5529 6000</a>
         </nav>
     </header>
-    <section>
+    <section class="bg">
         <input type="text" name="form" class="over">
         <div id="banner">
-            <h1>SOLUCIONES EFICACES PARA SU NEGOCIO</h1> <br>
+            <h1 class="text">SOLUCIONES EFICACES PARA SU NEGOCIO</h1> <br>
             <button>Solicite nuestro servicio</button>
         </div>
     </section>
